@@ -5,14 +5,16 @@ our $VERSION = '0.213';
 use Moose ();
 use Moose::Exporter;
 
-my ($import, $unimport, $init_meta) = Moose::Exporter->setup_import_methods(
-    with_caller              => [qw(event)],
-    also                     => 'Moose',
-    install                  => [qw(import unimport)],
-    metaclass_roles          => ['MooseX::POE::Meta::Trait::Class'],
-    constructor_class_roles  => ['MooseX::POE::Meta::Trait::Constructor'],
-    instance_metaclass_roles => ['MooseX::POE::Meta::Trait::Instance'],
-    base_class_roles         => ['MooseX::POE::Meta::Trait::Object'],
+my ( $import, $unimport, $init_meta ) = Moose::Exporter->setup_import_methods(
+    with_caller     => [qw(event)],
+    also            => 'Moose',
+    install         => [qw(import unimport)],
+    class_metaroles => {
+        class       => ['MooseX::POE::Meta::Trait::Class'],
+        constructor => ['MooseX::POE::Meta::Trait::Constructor'],
+        instance    => ['MooseX::POE::Meta::Trait::Instance'],
+    },
+    base_class_roles => ['MooseX::POE::Meta::Trait::Object'],
 );
 
 sub init_meta {
